# pbo-assistant

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  de.rouhim.pbo-assistant.yml
.desktop/: flatpak.yml  metainfo.xml  pbo-assistant.desktop
.github/updater/: update.json  update_json.sh
.github/workflows/: ci.yml
assets/: ui_style.css
assets/mprime/: prime.txt
mprime/: run.sh  start.sh
src/: cpu_test.rs  index.html  main.js  main.rs  mprime.rs  prime95.rs  process.rs  styles.css  ui.rs  ui_core_box_layout.rs  ui_custom_box.rs  ycruncher.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  cpu_info.rs  cpu_test.rs  main.rs  mprime.rs  process.rs  ycruncher.rs
src-tauri/test_proc_cpuinfo/: amd_hyperthreading  intel_hyperthreading  intel_mixedthreading
styles/: style.css
