[package]
name = "pbo-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
glib = "0.19.9"
gdk = "0.18.0"
gio = "0.19.8"

glib-macros = "0.19.9"
sysinfo = "0.30.12"
chrono = "0.4.38"
parse_duration = "2.1.1"
flate2 = "1.0"
tar = "0.4"
strum = "0.26.3"
strum_macros = "0.26.4"
once_cell = "1.19.0"