[package]
name = "pbo-assistant"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Other
chrono = "0.4.38"
parse_duration = "2.1.1"
flate2 = "1.0"
tar = "0.4"
strum = "0.26.3"
strum_macros = "0.26.4"
itertools = "0.13.0"
