[package]
name = "pbo-assistant"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0.0-rc.0", features = [] }
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 3rd party
chrono = "0.4.38"
parse_duration = "2.1.1"
flate2 = "1.0"
tar = "0.4"
strum = "0.26.3"
strum_macros = "0.26.4"
itertools = "0.13.0"
lazy_static = "1.5"
dirs = "5.0"
log = "0.4.22"

# Process and thread handling
nix = { version = "0.29.0", features = ["signal", "sched"] }
procfs = "0.17.0"

[dev-dependencies]
assertor = "0.0.3"
pretty_assertions = "1.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
